--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@
 # * https://www.objc.io/issues/6-build-tools/travis-ci/
 # * https://github.com/supermarin/xcpretty#usage
 
-osx_image: xcode7.3
-language: objective-c
 # cache: cocoapods
 # podfile: Example/Podfile
 # before_install:
@@ -12,3 +10,33 @@ language: objective-c
 script:
 - set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/ClockWise.xcworkspace -scheme ClockWise-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
+
+
+# 1
+language: swift
+xcode_project: ClockWise.xcodeproj 
+#xcode_scheme: ClockWiseTests
+osx_image: xcode11.4.1
+branches:
+  only:
+    - development
+    
+# 2
+before_install:
+- gem install cocoapods-acknowledgements
+- gem install cocoapods
+- pod install
+- brew update
+- if brew outdated --quiet | grep -qx xctool; then brew upgrade xctool; fi
+
+# 3
+script: xcodebuild clean && xcodebuild build -workspace ClockWise.xcworkspace -scheme ClockWise -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+#script: xcodebuild test -workspace ClockWise.xcworkspace -scheme ClockWiseTests -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+
+# 4
+#script: xctool test -workspace ClockWise.xcworkspace -scheme ClockWise -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+
+# 5
+script: 
+  - xcodebuild build-for-testing -workspace ClockWise.xcworkspace -scheme ClockWise -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+ # - xctool run-tests -workspace ClockWise.xcworkspace -scheme ClockWiseTests -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
